Removido dependências do vendor

--- a/zend-math/composer.json
+++ b/zend-math/composer.json
@@ -37,7 +37,6 @@
     "require-dev": {
         "fabpot/php-cs-fixer": "1.7.*",
         "ircmaxell/random-lib": "~1.1",
-        "phpunit/PHPUnit": "~4.0",
-        "zendframework/zend-servicemanager": "~2.5"
+        "phpunit/PHPUnit": "~4.0"
     }
 }
