--- a/zend-authentication/composer.json
+++ b/zend-authentication/composer.json
@@ -13,17 +13,9 @@
         }
     },
     "require": {
-        "php": ">=5.5",
-        "zendframework/zend-stdlib": "~2.5"
+        "php": ">=5.5"
     },
     "require-dev": {
-        "zendframework/zend-db": "~2.5",
-        "zendframework/zend-crypt": "~2.5",
-        "zendframework/zend-http": "~2.5",
-        "zendframework/zend-ldap": "~2.5",
-        "zendframework/zend-session": "~2.5",
-        "zendframework/zend-validator": "~2.5",
-        "zendframework/zend-uri": "~2.5",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
     },
