--- a/zend-barcode/composer.json
+++ b/zend-barcode/composer.json
@@ -13,14 +13,9 @@
         }
     },
     "require": {
-        "php": ">=5.5",
-        "zendframework/zend-stdlib": "~2.5",
-        "zendframework/zend-validator": "~2.5",
-        "zendframework/zend-servicemanager": "~2.5"
+        "php": ">=5.5"
     },
     "require-dev": {
-        "zendframework/zend-config": "~2.5",
-        "zendframework/zendpdf": "*",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
     },
