--- a/zend-captcha/composer.json
+++ b/zend-captcha/composer.json
@@ -13,14 +13,9 @@
         }
     },
     "require": {
-        "php": ">=5.5",
-        "zendframework/zend-math": "~2.5",
-        "zendframework/zend-stdlib": "~2.5"
+        "php": ">=5.5"
     },
     "require-dev": {
-        "zendframework/zend-session": "~2.5",
-        "zendframework/zend-text": "~2.5",
-        "zendframework/zend-validator": "~2.5",
         "zendframework/zendservice-recaptcha": "*",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
