--- a/zend-code/composer.json
+++ b/zend-code/composer.json
@@ -13,12 +13,10 @@
         }
     },
     "require": {
-        "php": ">=5.5",
-        "zendframework/zend-eventmanager": "~2.5"
+        "php": ">=5.5"
     },
     "require-dev": {
         "doctrine/common": ">=2.1",
-        "zendframework/zend-stdlib": "~2.5",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
     },
