--- a/zend-console/composer.json
+++ b/zend-console/composer.json
@@ -13,8 +13,7 @@
         }
     },
     "require": {
-        "php": ">=5.3.23",
-        "zendframework/zend-stdlib": "~2.5"
+        "php": ">=5.3.23"
     },
     "suggest": {
         "zendframework/zend-validator": "To support DefaultRouteMatcher usage",
