--- a/zend-crypt/composer.json
+++ b/zend-crypt/composer.json
@@ -13,10 +13,7 @@
         }
     },
     "require": {
-        "php": ">=5.5",
-        "zendframework/zend-math": "~2.5",
-        "zendframework/zend-stdlib": "~2.5",
-        "zendframework/zend-servicemanager": "~2.5"
+        "php": ">=5.5"
     },
     "suggest": {
         "ext-mcrypt": "Required for most features of Zend\\Crypt"
@@ -36,7 +33,6 @@
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "1.7.*",
-        "phpunit/PHPUnit": "~4.0",
-        "zendframework/zend-config": "~2.5"
+        "phpunit/PHPUnit": "~4.0"
     }
 }
