--- a/zend-db/composer.json
+++ b/zend-db/composer.json
@@ -13,14 +13,9 @@
         }
     },
     "require": {
-        "php": ">=5.5",
-        "zendframework/zend-stdlib": "~2.5"
+        "php": ">=5.5"
     },
     "require-dev": {
-        "zendframework/zend-eventmanager": "~2.5",
-        "zendframework/zend-mvc": "~2.5",
-        "zendframework/zend-servicemanager": "~2.5",
-        "zendframework/zend-stdlib": ">=2.5.0,<2.7.0",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
     },
