--- a/zend-di/composer.json
+++ b/zend-di/composer.json
@@ -13,19 +13,9 @@
         }
     },
     "require": {
-        "php": ">=5.3.23",
-        "zendframework/zend-code": "~2.5",
-        "zendframework/zend-stdlib": "~2.5"
+        "php": ">=5.3.23"
     },
     "require-dev": {
-        "zendframework/zend-config": "~2.5",
-        "zendframework/zend-db": "~2.5",
-        "zendframework/zend-filter": "~2.5",
-        "zendframework/zend-form": "~2.5",
-        "zendframework/zend-log": "~2.5",
-        "zendframework/zend-mvc": "~2.5",
-        "zendframework/zend-servicemanager": "~2.5",
-        "zendframework/zend-view": "~2.5",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
     },
