--- a/zend-eventmanager/composer.json
+++ b/zend-eventmanager/composer.json
@@ -13,8 +13,7 @@
         }
     },
     "require": {
-        "php": ">=5.5",
-        "zendframework/zend-stdlib": "~2.5"
+        "php": ">=5.5"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
