--- a/zend-filter/composer.json
+++ b/zend-filter/composer.json
@@ -13,16 +13,9 @@
         }
     },
     "require": {
-        "php": ">=5.3.23",
-        "zendframework/zend-stdlib": "~2.5"
+        "php": ">=5.3.23"
     },
     "require-dev": {
-        "zendframework/zend-config": "~2.5",
-        "zendframework/zend-crypt": "~2.5",
-        "zendframework/zend-i18n": "~2.5",
-        "zendframework/zend-loader": "~2.5",
-        "zendframework/zend-servicemanager": "~2.5",
-        "zendframework/zend-uri": "~2.5",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
     },
