--- a/zend-http/composer.json
+++ b/zend-http/composer.json
@@ -14,16 +14,10 @@
         }
     },
     "require": {
-        "php": "^5.5 || ^7.0",
-        "zendframework/zend-loader": "^2.5",
-        "zendframework/zend-stdlib": "^2.5 || ^3.0",
-        "zendframework/zend-uri": "^2.5",
-        "zendframework/zend-validator": "^2.5"
+        "php": "^5.5 || ^7.0"
     },
     "require-dev": {
-        "phpunit/PHPUnit": "^4.0",
-        "zendframework/zend-config": "^2.5",
-        "zendframework/zend-coding-standard": "~1.0.0"
+        "phpunit/PHPUnit": "^4.0"
     },
     "autoload": {
         "psr-4": {
