--- a/zend-json/composer.json
+++ b/zend-json/composer.json
@@ -13,12 +13,9 @@
         }
     },
     "require": {
-        "php": ">=5.5",
-        "zendframework/zend-stdlib": "~2.5"
+        "php": ">=5.5"
     },
     "require-dev": {
-        "zendframework/zend-http": "~2.5",
-        "zendframework/zend-server": "~2.5",
         "zendframework/zendxml": "~1.0",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
