--- a/zend-ldap/composer.json
+++ b/zend-ldap/composer.json
@@ -21,11 +21,7 @@
     },
     "require-dev": {
         "php-mock/php-mock-phpunit": "^1.1.2 || ^2.1.1",
-        "phpunit/phpunit": "^5.7.27 || ^6.5.8 || ^7.1.2",
-        "zendframework/zend-coding-standard": "~1.0.0",
-        "zendframework/zend-config": "^2.5",
-        "zendframework/zend-eventmanager": "^2.6.3 || ^3.0.1",
-        "zendframework/zend-stdlib": "^2.7 || ^3.0"
+        "phpunit/phpunit": "^5.7.27 || ^6.5.8 || ^7.1.2"
     },
     "suggest": {
         "zendframework/zend-eventmanager": "Zend\\EventManager component"
