--- a/zend-log/composer.json
+++ b/zend-log/composer.json
@@ -14,18 +14,9 @@
         }
     },
     "require": {
-        "php": ">=5.5",
-        "zendframework/zend-servicemanager": "~2.5",
-        "zendframework/zend-stdlib": "~2.5"
+        "php": ">=5.5"
     },
     "require-dev": {
-        "zendframework/zend-console": "~2.5",
-        "zendframework/zend-db": "~2.5",
-        "zendframework/zend-escaper": "~2.5",
-        "zendframework/zend-filter": "~2.5",
-        "zendframework/zend-mail": "~2.5",
-        "zendframework/zend-mvc": "~2.5",
-        "zendframework/zend-validator": "~2.5",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
     },
