--- a/zend-mail/composer.json
+++ b/zend-mail/composer.json
@@ -13,16 +13,9 @@
         }
     },
     "require": {
-        "php": ">=5.5",
-        "zendframework/zend-crypt": "~2.5",
-        "zendframework/zend-loader": "~2.5",
-        "zendframework/zend-mime": "~2.5",
-        "zendframework/zend-stdlib": "~2.5",
-        "zendframework/zend-validator": "~2.5"
+        "php": ">=5.5"
     },
     "require-dev": {
-        "zendframework/zend-config": "~2.5",
-        "zendframework/zend-servicemanager": "~2.5",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
     },
