--- a/zend-modulemanager/composer.json
+++ b/zend-modulemanager/composer.json
@@ -13,17 +13,9 @@
         }
     },
     "require": {
-        "php": ">=5.5",
-        "zendframework/zend-eventmanager": "~2.5",
-        "zendframework/zend-stdlib": ">=2.5.0,<2.7.0"
+        "php": ">=5.5"
     },
     "require-dev": {
-        "zendframework/zend-config": "~2.5",
-        "zendframework/zend-console": "~2.5",
-        "zendframework/zend-di": "~2.5",
-        "zendframework/zend-loader": "~2.5",
-        "zendframework/zend-mvc": "~2.5",
-        "zendframework/zend-servicemanager": "~2.5",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
     },
