--- a/zend-mvc/composer.json
+++ b/zend-mvc/composer.json
@@ -13,31 +13,9 @@
         }
     },
     "require": {
-        "php": ">=5.5",
-        "zendframework/zend-eventmanager": "~2.5",
-        "zendframework/zend-servicemanager": "~2.5",
-        "zendframework/zend-form": "~2.5",
-        "zendframework/zend-stdlib": ">=2.5.0,<2.7.0"
+        "php": ">=5.5"
     },
     "require-dev": {
-        "zendframework/zend-authentication": "~2.5",
-        "zendframework/zend-cache": "~2.5",
-        "zendframework/zend-console": "~2.5",
-        "zendframework/zend-di": "~2.5",
-        "zendframework/zend-filter": "~2.5",
-        "zendframework/zend-http": "~2.5",
-        "zendframework/zend-i18n": "~2.5",
-        "zendframework/zend-inputfilter": "~2.5",
-        "zendframework/zend-json": "~2.5",
-        "zendframework/zend-log": "~2.5",
-        "zendframework/zend-modulemanager": "~2.5",
-        "zendframework/zend-session": "~2.5",
-        "zendframework/zend-serializer": "~2.5",
-        "zendframework/zend-text": "~2.5",
-        "zendframework/zend-uri": "~2.5",
-        "zendframework/zend-validator": "~2.5",
-        "zendframework/zend-version": "~2.5",
-        "zendframework/zend-view": "~2.5",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
     },
