--- a/zend-navigation/composer.json
+++ b/zend-navigation/composer.json
@@ -13,22 +13,9 @@
         }
     },
     "require": {
-        "php": ">=5.3.23",
-        "zendframework/zend-stdlib": "~2.5"
+        "php": ">=5.3.23"
     },
     "require-dev": {
-        "zendframework/zend-config": "~2.5",
-        "zendframework/zend-console": "~2.5",
-        "zendframework/zend-http": "~2.5",
-        "zendframework/zend-i18n": "~2.5",
-        "zendframework/zend-log": "~2.5",
-        "zendframework/zend-modulemanager": "~2.5",
-        "zendframework/zend-mvc": "~2.5",
-        "zendframework/zend-permissions-acl": "~2.5",
-        "zendframework/zend-serializer": "~2.5",
-        "zendframework/zend-servicemanager": "~2.5",
-        "zendframework/zend-uri": "~2.5",
-        "zendframework/zend-view": "~2.5",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
     },
