--- a/zend-permissions-acl/composer.json
+++ b/zend-permissions-acl/composer.json
@@ -33,8 +33,6 @@
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "1.7.*",
-        "phpunit/PHPUnit": "~4.0",
-        "zendframework/zend-di": "~2.5",
-        "zendframework/zend-servicemanager": "~2.5"
+        "phpunit/PHPUnit": "~4.0"
     }
 }
