--- a/zend-progressbar/composer.json
+++ b/zend-progressbar/composer.json
@@ -13,12 +13,9 @@
         }
     },
     "require": {
-        "php": ">=5.3.23",
-        "zendframework/zend-stdlib": "~2.5"
+        "php": ">=5.3.23"
     },
     "require-dev": {
-        "zendframework/zend-json": "~2.5",
-        "zendframework/zend-session": "~2.5",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
     },
