--- a/zend-server/composer.json
+++ b/zend-server/composer.json
@@ -13,9 +13,7 @@
         }
     },
     "require": {
-        "php": ">=5.3.23",
-        "zendframework/zend-stdlib": "~2.5",
-        "zendframework/zend-code": "~2.5"
+        "php": ">=5.3.23"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
