--- a/zend-soap/composer.json
+++ b/zend-soap/composer.json
@@ -13,14 +13,9 @@
         }
     },
     "require": {
-        "php": ">=5.3.23",
-        "zendframework/zend-server": "~2.5",
-        "zendframework/zend-stdlib": "~2.5",
-        "zendframework/zend-uri": "~2.5"
+        "php": ">=5.3.23"
     },
     "require-dev": {
-        "zendframework/zend-config": "~2.5",
-        "zendframework/zend-http": "~2.5",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
     },
