--- a/zend-text/composer.json
+++ b/zend-text/composer.json
@@ -13,9 +13,7 @@
         }
     },
     "require": {
-        "php": ">=5.3.23",
-        "zendframework/zend-stdlib": "~2.5",
-        "zendframework/zend-servicemanager": "~2.5"
+        "php": ">=5.3.23"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -32,7 +30,6 @@
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "1.7.*",
-        "phpunit/PHPUnit": "~4.0",
-        "zendframework/zend-config": "~2.5"
+        "phpunit/PHPUnit": "~4.0"
     }
 }
