--- a/zend-uri/composer.json
+++ b/zend-uri/composer.json
@@ -13,9 +13,7 @@
         }
     },
     "require": {
-        "php": "^5.5 || ^7.0",
-        "zendframework/zend-escaper": "^2.5",
-        "zendframework/zend-validator": "^2.5"
+        "php": "^5.5 || ^7.0"
     },
     "extra": {
         "branch-alias": {
