--- a/zend-validator/composer.json
+++ b/zend-validator/composer.json
@@ -13,20 +13,9 @@
         }
     },
     "require": {
-        "php": "^5.5 || ^7.0",
-        "zendframework/zend-stdlib": "~2.5"
+        "php": "^5.5 || ^7.0"
     },
     "require-dev": {
-        "zendframework/zend-cache": "~2.5",
-        "zendframework/zend-config": "~2.5",
-        "zendframework/zend-db": "~2.5",
-        "zendframework/zend-filter": "~2.5",
-        "zendframework/zend-http": "~2.5",
-        "zendframework/zend-i18n": "~2.5",
-        "zendframework/zend-math": "~2.5",
-        "zendframework/zend-servicemanager": "~2.5",
-        "zendframework/zend-session": "~2.5",
-        "zendframework/zend-uri": "~2.5",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
     },
