--- a/zend-version/composer.json
+++ b/zend-version/composer.json
@@ -13,8 +13,7 @@
         }
     },
     "require": {
-        "php": ">=5.3.23",
-        "zendframework/zend-json": "~2.5"
+        "php": ">=5.3.23"
     },
     "suggest": {
         "zendframework/zend-http": "Allows use of Zend\\Http\\Client to check version information",
@@ -35,7 +34,6 @@
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "1.7.*",
-        "phpunit/PHPUnit": "~4.0",
-        "zendframework/zend-http": "~2.5"
+        "phpunit/PHPUnit": "~4.0"
     }
 }
