--- a/zend-view/composer.json
+++ b/zend-view/composer.json
@@ -13,32 +13,9 @@
         }
     },
     "require": {
-        "php": "^5.5 || ^7.0",
-        "zendframework/zend-eventmanager": "~2.5",
-        "zendframework/zend-loader": "~2.5",
-        "zendframework/zend-stdlib": "~2.5"
+        "php": "^5.5 || ^7.0"
     },
     "require-dev": {
-        "zendframework/zend-authentication": "~2.5",
-        "zendframework/zend-cache": "~2.5",
-        "zendframework/zend-config": "~2.5",
-        "zendframework/zend-console": "~2.5",
-        "zendframework/zend-escaper": "~2.5",
-        "zendframework/zend-feed": "~2.5",
-        "zendframework/zend-filter": "~2.5",
-        "zendframework/zend-http": "~2.5",
-        "zendframework/zend-i18n": "~2.5",
-        "zendframework/zend-json": "~2.5",
-        "zendframework/zend-log": "~2.5",
-        "zendframework/zend-modulemanager": "~2.5",
-        "zendframework/zend-mvc": "~2.5",
-        "zendframework/zend-navigation": "~2.5",
-        "zendframework/zend-paginator": "~2.5",
-        "zendframework/zend-permissions-acl": "~2.5",
-        "zendframework/zend-serializer": "~2.5",
-        "zendframework/zend-servicemanager": "~2.5",
-        "zendframework/zend-session": "dev-master",
-        "zendframework/zend-uri": "~2.5",
         "fabpot/php-cs-fixer": "1.7.*",
         "phpunit/PHPUnit": "~4.0"
     },
