--- a/zend-console/composer.json
+++ b/zend-console/composer.json
@@ -15,10 +15,6 @@
     "require": {
         "php": ">=5.3.23"
     },
-    "suggest": {
-        "zendframework/zend-validator": "To support DefaultRouteMatcher usage",
-        "zendframework/zend-filter": "To support DefaultRouteMatcher usage"
-    },
     "minimum-stability": "dev",
     "prefer-stable": true,
     "extra": {
@@ -34,9 +30,6 @@
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "1.7.*",
-        "phpunit/PHPUnit": "~4.0",
-        "zendframework/zend-filter": "~2.5",
-        "zendframework/zend-json": "~2.5",
-        "zendframework/zend-validator": "~2.5"
+        "phpunit/PHPUnit": "~4.0"
     }
 }
