--- a/zend-debug/composer.json
+++ b/zend-debug/composer.json
@@ -20,8 +20,7 @@
         "phpunit/PHPUnit": "~4.0"
     },
     "suggest": {
-        "ext/xdebug": "XDebug, for better backtrace output",
-        "zendframework/zend-escaper": "To support escaped output"
+        "ext/xdebug": "XDebug, for better backtrace output"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
