--- a/zend-i18n/composer.json
+++ b/zend-i18n/composer.json
@@ -20,15 +20,7 @@
         "phpunit/PHPUnit": "~4.0"
     },
     "suggest": {
-        "ext-intl": "Required for most features of Zend\\I18n; included in default builds of PHP",
-        "zendframework/zend-cache": "Zend\\Cache component",
-        "zendframework/zend-config": "Zend\\Config component",
-        "zendframework/zend-eventmanager": "You should install this package to use the events in the translator",
-        "zendframework/zend-filter": "You should install this package to use the provided filters",
-        "zendframework/zend-servicemanager": "Zend\\ServiceManager component",
-        "zendframework/zend-validator": "You should install this package to use the provided validators",
-        "zendframework/zend-view": "You should install this package to use the provided view helpers",
-        "zendframework/zend-resources": "Translation resources"
+        "ext-intl": "Required for most features of Zend\\I18n; included in default builds of PHP"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
