--- a/zend-math/composer.json
+++ b/zend-math/composer.json
@@ -18,8 +18,7 @@
     "suggest": {
         "ext-bcmath": "If using the bcmath functionality",
         "ext-gmp": "If using the gmp functionality",
-        "ircmaxell/random-lib": "Fallback random byte generator for Zend\\Math\\Rand if OpenSSL/Mcrypt extensions are unavailable",
-        "zendframework/zend-servicemanager": ">= current version, if using the BigInteger::factory functionality"
+        "ircmaxell/random-lib": "Fallback random byte generator for Zend\\Math\\Rand if OpenSSL/Mcrypt extensions are unavailable"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
