--- a/zend-servicemanager/composer.json
+++ b/zend-servicemanager/composer.json
@@ -20,8 +20,7 @@
         "phpunit/PHPUnit": "~4.0"
     },
     "suggest": {
-        "ocramius/proxy-manager": "ProxyManager 0.5.* to handle lazy initialization of services",
-        "zendframework/zend-di": "Zend\\Di component"
+        "ocramius/proxy-manager": "ProxyManager 0.5.* to handle lazy initialization of services"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
