--- a/zend-xmlrpc/composer.json
+++ b/zend-xmlrpc/composer.json
@@ -13,11 +13,7 @@
         }
     },
     "require": {
-        "php": ">=5.3.23",
-        "zendframework/zendxml": "1.*"
-    },
-    "suggest": {
-        "zendframework/zend-cache": "To support Zend\\XmlRpc\\Server\\Cache usage"
+        "php": ">=5.3.23"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
@@ -34,7 +30,6 @@
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "1.7.*",
-        "phpunit/PHPUnit": "~4.0",
-        "zendframework/zend-servicemanager": "~2.5"
+        "phpunit/PHPUnit": "~4.0"
     }
 }
